shopping list update

--- a/src/components/ShoppingListItem.module.css
+++ b/src/components/ShoppingListItem.module.css
@@ -9,3 +9,12 @@
 .removeButton:active {
   @apply drop-shadow-md opacity-75;
 }
+.checkedItem {
+  text-decoration: none;
+}
+
+.checkedText {
+  text-decoration: line-through;
+}
+
+
